assets/sass/main.scss
/* ... */
/* Goto Next */

	.goto-next {
		border: 0;
		bottom: 0;
		display: block;
		height: 5em;
		left: 50%;
		margin: 0 0 0 -5em;
		overflow: hidden;
		position: absolute;
		text-indent: 10em;
		white-space: nowrap;
		width: 10em;
		z-index: 1;

		&:before {
			background-image: url('images/arrow.svg');
			background-position: center center;
			background-repeat: no-repeat;
			background-size: contain;
			content: '';
			display: block;
			height: 1.5em;
			left: 50%;
			margin: -0.75em 0 0 -1em;
			position: absolute;
			top: 50%;
			width: 2em;
			z-index: 1;
		}
	}

/* Spotlight */

	.spotlight {
		background-attachment:	fixed;
		background-position:	center center;
		background-size:		cover;
		box-shadow: 0 0.25em 0.5em 0 rgba(0,0,0,0.25);
		height: 100vh;
		overflow: hidden;
		position: relative;

		// Force spotlights to stack in reverse order (needed for our box
		// shadows to overlap stuff in the right direction).
		@for $i from 1 through _misc(max-spotlight) {
			&:nth-last-of-type(#{$i}) {
				z-index: #{$i};
			}
		}

		&:before {
			background-image: url('images/overlay.png');
			content: '';
			display: block;
			height: 100%;
			left: 0;
			top: 0;
			width: 100%;
		}

		.image.main {
			display: none;

			img {
				position: relative;
			}
		}

		.content {
			@include vendor('transform', 'translate(0,0)');
			@include vendor('transition', 'transform 1s ease, opacity 1s ease');
			background: _palette(bg-transparent);
			border-style: solid;
			opacity: 1;
			position: absolute;
		}

		.goto-next {
			@include vendor('transform', 'translate(0,0)');
			@include vendor('transition', 'transform 0.75s ease, opacity 1s ease-in');
			@include vendor('transition-delay', '0.5s');
			opacity: 1;
		}

		&.top, &.bottom {
			.content {
				left: 0;
				padding: ($size-wrapper-pad-tb * 0.85) 0 (($size-wrapper-pad-tb * 0.85) - _size(element-margin)) 0;
				width: 100%;
			}
		}

		&.top {
			.content {
				border-bottom-width: 0.35em;
				top: 0;
			}
		}

		&.bottom {
			.content {
				border-top-width: 0.35em;
				bottom: 0;
			}
		}

		&.left, &.right {
			.content {
				height: 101%;
				padding: $size-wrapper-pad-tb $size-wrapper-pad-lr;
				top: 0;
				width: 28em;
			}
		}

		&.left {
			.content {
				border-right-width: 0.35em;
				left: 0;
			}
		}

		&.right {
			.content {
				border-left-width: 0.35em;
				right: 0;
			}
		}

		&.style1 {
			.content {
				border-color: _palette(accent1);
			}
		}

		&.style2 {
			.content {
				border-color: _palette(accent3);
			}
		}

		&.style3 {
			.content {
				border-color: _palette(accent4);
			}
		}

		&.inactive {
			.content {
				opacity: 0;
			}

			.goto-next {
				@include vendor('transform', 'translate(0,1.5em)');
				opacity: 0;
			}

			&.top {
				.content {
					@include vendor('transform', 'translate(0,-5em)');
				}
			}

			&.bottom {
				.content {
					@include vendor('transform', 'translate(0,5em)');
				}
			}

			&.left {
				.content {
					@include vendor('transform', 'translate(-5em,0)');
				}
			}

			&.right {
				.content {
					@include vendor('transform', 'translate(5em,0)');
				}
			}
		}
	}

	body.is-touch {
		.spotlight {
			background-attachment: scroll;
		}
	}

/* Wrapper */

	.wrapper {
		padding: $size-wrapper-pad-tb 0 ($size-wrapper-pad-tb - _size(element-margin)) 0;

		&.style1 {
		}

		&.style2 {
			background: _palette(accent1);

			input[type="text"],
			input[type="password"],
			input[type="email"],
			select,
			textarea {
				&:focus {
					border-color: _palette(border2);
				}
			}

			input[type="submit"],
			input[type="reset"],
			input[type="button"],
			.button {
				&:hover, &:active {
					background-color: _palette(border-bg) !important;
					box-shadow: inset 0 0 0 1px _palette(border2) !important;
					color: _palette(fg-bold) !important;
				}

				&:active {
					background-color: _palette(border2-bg) !important;
				}

				&.special {
					background-color: _palette(fg-bold);
					color: _palette(accent1) !important;

					&:hover, &:active {
						background-color: _palette(border-bg) !important;
						box-shadow: inset 0 0 0 1px _palette(border2) !important;
						color: _palette(fg-bold) !important;
					}

					&:active {
						background-color: _palette(border2-bg) !important;
					}
				}
			}
		}

		&.fade-down {
			> .container {
				@include vendor('transform', 'translate(0,0)');
				@include vendor('transition', 'transform 1s ease, opacity 1s ease');
				opacity: 1;
			}

			&.inactive {
				> .container {
					@include vendor('transform', 'translate(0,-1em)');
					opacity: 0;
				}
			}
		}

		&.fade-up {
			> .container {
				@include vendor('transform', 'translate(0,0)');
				@include vendor('transition', 'transform 1s ease, opacity 1s ease');
				opacity: 1;
			}

			&.inactive {
				> .container {
					@include vendor('transform', 'translate(0,1em)');
					opacity: 0;
				}
			}
		}

		&.fade {
			> .container {
				@include vendor('transition', 'opacity 1s ease');
				opacity: 1;
			}

			&.inactive {
				> .container {
					opacity: 0;
				}
			}
		}
	}

/* Dropotron */

	.dropotron {
		background: _palette(accent2-transparent);
		border-radius: _size(border-radius);
		box-shadow: 0 0.075em 0.35em 0 rgba(0,0,0,0.125);
		list-style: none;
		margin-top: calc(-0.25em + 1px);
		min-width: 12em;
		padding: 0.25em 0;

		> li {
			border-top: solid 1px rgba(255,255,255,0.035);
			padding: 0;

			a, span {
				border: 0;
				color: _palette(fg);
				display: block;
				padding: 0.1em 1em;
				text-decoration: none;
			}

			&:first-child {
				border-top: 0;
			}

			&.active {
				> a, > span {
					color: _palette(accent1);
				}
			}
		}

		&.level-0 {
			font-size: 0.8em;
			margin-top: 1em;

			&:before {
				@include vendor('transform', 'rotate(45deg)');
				background: _palette(accent2);
				content: '';
				display: block;
				height: 1em;
				position: absolute;
				right: 1.5em;
				top: -0.5em;
				width: 1em;
			}
		}
	}
/* ... */

